tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/serverfirst/auto-tcp-server:DISABLE/PERMISSIVE/_test_context/DestinationRule-PeerAuthentication.618634025.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-20468
spec:
  host: c
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-20468
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: c
